added email to userDTO